package com.example.eventbooking.Admin.Event;

public class EventViewAdapter {
}
