package com.example.drawernavigationexample.ui.event;

public class EventFragment {
}
